force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Escalated_Date__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Date__c</fullName>
    <description>Complaints IGMS History Field</description>
    <label>Escalated Date</label>
    <type>Date</type>
</CustomField>