force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Escalation_received__c.field-meta.xml
<CustomField>
    <fullName>Escalation_received__c</fullName>
    <description>Complaints Resolution Field</description>
    <label>Escalation received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CEO’s Office</fullName>
            </value>
            <value>
                <fullName>COO’s Office</fullName>
            </value>
            <value>
                <fullName>ABC Secretarial</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>