force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Follow_up_Name__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Name__c</fullName>
    <description>Complaints Resolution Field</description>
    <label>Follow up Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>