force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Fund_Tranfer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fund_Tranfer_Amount__c</fullName>
    <label>Fund Tranfer Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>