force-app/main/default/objects/ABSLI_Case_Detail__c/fields/GRC_presented__c.field-meta.xml
<CustomField>
    <fullName>GRC_presented__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Complaints Resolution Field</description>
    <label>GRC presented</label>
    <type>Checkbox</type>
</CustomField>