force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Hold_City_Or_Country__c.field-meta.xml
<CustomField>
    <fullName>Hold_City_Or_Country__c</fullName>
    <label>Hold City Or Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>