force-app/main/default/objects/ABSLI_Case_Detail__c/fields/ICF_Reason_if_no__c.field-meta.xml
<CustomField>
    <fullName>ICF_Reason_if_no__c</fullName>
    <description>Complaints Resolution Field</description>
    <label>ICF - Reason if no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>