force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Identifier_Type__c.field-meta.xml
<CustomField>
    <fullName>Identifier_Type__c</fullName>
    <description>Complaints IGMS Field</description>
    <label>Identifier Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Policy Number</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Proposal Number</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Certificate Number</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Claim Number</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>