force-app/main/default/objects/ABSLI_Case_Detail__c/fields/IGMS_Complaint_Against_Type__c.field-meta.xml
<CustomField>
    <fullName>IGMS_Complaint_Against_Type__c</fullName>
    <description>Complaints IGMS Field</description>
    <label>IGMS Complaint Against Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>Insurer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>