force-app/main/default/objects/ABSLI_Case_Detail__c/fields/IGMS_Complaint_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>IGMS_Complaint_Registration_Date__c</fullName>
    <description>Complaints IGMS Field</description>
    <label>IGMS Complaint Registration Date</label>
    <type>Date</type>
</CustomField>