force-app/main/default/objects/ABSLI_Case_Detail__c/fields/IGMS_Complaint_Status__c.field-meta.xml
<CustomField>
    <fullName>IGMS_Complaint_Status__c</fullName>
    <description>This field is used in IRDAI to Salesforce Complaint Creation Inbound API.
This field is used in Salesforce to IRDAI Complaint Update Outbound API.</description>
    <label>IGMS Complaint Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>New</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Acknowledged</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Pending</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Resolved</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Escalated</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Re-open</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Closed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>