force-app/main/default/objects/ABSLI_Case_Detail__c/fields/IGMS_Created_Case__c.field-meta.xml
<CustomField>
    <fullName>IGMS_Created_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used in IGMS to Salesforce Complaint Inbound API.</description>
    <label>IGMS Created Case</label>
    <type>Checkbox</type>
</CustomField>