force-app/main/default/objects/ABSLI_Case_Detail__c/fields/IGMS_Remarks__c.field-meta.xml
<CustomField>
    <fullName>IGMS_Remarks__c</fullName>
    <description>This field is used in IGMS Inbound as well as Outbound Integration.</description>
    <label>IGMS Remarks</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>