force-app/main/default/objects/ABSLI_Case_Detail__c/fields/IGMS_State_Id__c.field-meta.xml
<CustomField>
    <fullName>IGMS_State_Id__c</fullName>
    <description>This field is used in IGMS to Salesforce Complaint Creation Inbound API.</description>
    <label>IGMS State Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>