force-app/main/default/objects/ABSLI_Case_Detail__c/fields/IGMS_Type_of_Insurance__c.field-meta.xml
<CustomField>
    <fullName>IGMS_Type_of_Insurance__c</fullName>
    <label>IGMS Type of Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>Life Insurance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>