force-app/main/default/objects/ABSLI_Case_Detail__c/fields/IGMS_type_of_policy__c.field-meta.xml
<CustomField>
    <fullName>IGMS_type_of_policy__c</fullName>
    <description>Complaints IGMS Field</description>
    <label>IGMS type of policy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Conventional Life Insurance Policy</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Health Insurance Policy</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Others</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Unit Linked Insurance Policy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>