force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Initial_payment_details__c.field-meta.xml
<CustomField>
    <fullName>Initial_payment_details__c</fullName>
    <description>Complaints Resolution Field</description>
    <label>Initial payment details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>