force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Input_Given_By_process_owner__c.field-meta.xml
<CustomField>
    <fullName>Input_Given_By_process_owner__c</fullName>
    <description>Complaints Resolution Field</description>
    <label>Input Given By process owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>