force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Insurer_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurer_Policy_Number__c</fullName>
    <description>This field is Used in UpdateComplaintIGMSToCRM Inbound API 
This field is Used in UpdateComplaint to IGMS Outbound API</description>
    <label>Insurer Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>