force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Insurer_Policy_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurer_Policy_Type__c</fullName>
    <label>Insurer Policy Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Conventional Life Insurance Policy</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Health Insurance Policy</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Others</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Unit Linked Insurance Policy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>