force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Insurer_Resolution_Letter_date__c.field-meta.xml
<CustomField>
    <fullName>Insurer_Resolution_Letter_date__c</fullName>
    <description>This field is used in IGMS to Salesforce Complaint Creation Inbound API.</description>
    <label>Insurer Resolution Letter date</label>
    <type>Date</type>
</CustomField>