force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Interest_approve_by__c.field-meta.xml
<CustomField>
    <fullName>Interest_approve_by__c</fullName>
    <description>Complaints Resolution Field</description>
    <label>Interest approve by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>