force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Interest_paid_amount__c.field-meta.xml
<CustomField>
    <fullName>Interest_paid_amount__c</fullName>
    <description>Complaints Resolution Field</description>
    <label>Interest paid amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>