force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Interest_rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_rate__c</fullName>
    <description>Complaints Resolution Field</description>
    <label>Interest rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>