force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Intermediary_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Intermediary_License_Number__c</fullName>
    <description>This field is used in UpdateComplaintIGMSToCRM Inbound API to CRM</description>
    <label>Intermediary License Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>