force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Investigation_Comment__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Comment__c</fullName>
    <description>Complaints Resolution Field</description>
    <label>Investigation Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>