force-app/main/default/objects/ABSLI_Case_Detail__c/fields/IRDAI_Token_Number__c.field-meta.xml
<CustomField>
    <fullName>IRDAI_Token_Number__c</fullName>
    <description>Complaints IGMS Field</description>
    <label>IRDAI Token Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>