force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Is_Auto_Escalated__c.field-meta.xml
<CustomField>
    <fullName>Is_Auto_Escalated__c</fullName>
    <description>Complaints IGMS Field</description>
    <label>Is Auto Escalated ?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>YES</label>
            </value>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>NO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>