force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Is_Closure_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Is_Closure_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Complaints IGMS Field</description>
    <label>Is Closure Accepted</label>
    <type>Checkbox</type>
</CustomField>