force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Is_Complainant_Informed__c.field-meta.xml
<CustomField>
    <fullName>Is_Complainant_Informed__c</fullName>
    <description>Complaints IGMS Field</description>
    <label>Is Complainant Informed ?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>