force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Is_PAN_Update_Successful__c.field-meta.xml
<CustomField>
    <fullName>Is_PAN_Update_Successful__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is PAN Update Successful</label>
    <type>Checkbox</type>
</CustomField>