force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Is_Senior_Citizen__c.field-meta.xml
<CustomField>
    <fullName>Is_Senior_Citizen__c</fullName>
    <label>Is Senior Citizen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>