force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Is_Surrender_Withdrawal_Successful__c.field-meta.xml
<CustomField>
    <fullName>Is_Surrender_Withdrawal_Successful__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Surrender/Withdrawal Successful</label>
    <type>Checkbox</type>
</CustomField>