force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Loan_Repayment_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Repayment_Type__c</fullName>
    <label>Loan Repayment  Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partial Loan Payment</fullName>
            </value>
            <value>
                <fullName>Full Loan Repayment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>