force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Max_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Max_Loan_Amount__c</fullName>
    <description>This is used in Loan Repayment Process.</description>
    <label>Max Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>