force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Medicals__c.field-meta.xml
<CustomField>
    <fullName>Medicals__c</fullName>
    <label>Medicals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>