force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Method_Change__c.field-meta.xml
<CustomField>
    <fullName>Method_Change__c</fullName>
    <label>Method Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>