force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Minimum_Withdrawal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Withdrawal_Amount__c</fullName>
    <label>Minimum Withdrawal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>