force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <description>To Store Phone number related to Mobile Update request.</description>
    <label>Mobile Number</label>
    <type>Phone</type>
</CustomField>