force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <description>This field is used in IGMS to Salesforce Complaint Creation Inbound API.</description>
    <label>Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>