force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Mode_of_communication_sent__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_communication_sent__c</fullName>
    <description>Complaints Resolution Field</description>
    <label>Mode of communication sent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Letter</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>