force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Name_of_the_Diagnostic_Center__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_Diagnostic_Center__c</fullName>
    <label>Name of the Diagnostic Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>