force-app/main/default/objects/ABSLI_Case_Detail__c/fields/NEFT_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>NEFT_Reference_Number__c</fullName>
    <label>NEFT Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>