force-app/main/default/objects/ABSLI_Case_Detail__c/fields/New_Application_Policy_No__c.field-meta.xml
<CustomField>
    <fullName>New_Application_Policy_No__c</fullName>
    <label>New Application+Policy No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>