force-app/main/default/objects/ABSLI_Case_Detail__c/fields/New_Frequency__c.field-meta.xml
<CustomField>
    <fullName>New_Frequency__c</fullName>
    <label>New Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ABSLI_Mode_Change_Frequency</valueSetName>
    </valueSet>
</CustomField>