force-app/main/default/objects/ABSLI_Case_Detail__c/fields/New_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Registration_Date__c</fullName>
    <description>Complaints IGMS History Field</description>
    <label>New Registration Date</label>
    <type>Date</type>
</CustomField>