force-app/main/default/objects/ABSLI_Case_Detail__c/fields/NRI_State__c.field-meta.xml
<CustomField>
    <fullName>NRI_State__c</fullName>
    <label>NRI State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>