force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Old_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Old_Policy_Number__c</fullName>
    <label>Old Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>