force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Onbehalf_of__c.field-meta.xml
<CustomField>
    <fullName>Onbehalf_of__c</fullName>
    <label>Onbehalf of</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>