force-app/main/default/objects/ABSLI_Case_Detail__c/fields/OneABC_Customer_TAT__c.field-meta.xml
<CustomField>
    <fullName>OneABC_Customer_TAT__c</fullName>
    <description>This field is used in oneABC Inbound Integration.</description>
    <label>OneABC Customer TAT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>