force-app/main/default/objects/ABSLI_Case_Detail__c/fields/OneABCId__c.field-meta.xml
<CustomField>
    <fullName>OneABCId__c</fullName>
    <description>oneABC Integration field</description>
    <label>OneABCId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>