force-app/main/default/objects/ABSLI_Case_Detail__c/fields/OneABCOwner__c.field-meta.xml
<CustomField>
    <fullName>OneABCOwner__c</fullName>
    <description>oneABC Integration field</description>
    <label>OneABC Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>