force-app/main/default/objects/ABSLI_Case_Detail__c/fields/OR_Number__c.field-meta.xml
<CustomField>
    <fullName>OR_Number__c</fullName>
    <label>OR Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>