force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Other_Issue__c.field-meta.xml
<CustomField>
    <fullName>Other_Issue__c</fullName>
    <label>Other Issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>