force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Others_Clsr_Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Others_Clsr_Additional_Info__c</fullName>
    <description>IGMS --&gt; Required to Resolve Escalated Cases.</description>
    <label>Others Clsr Additional Info</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>