force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Unresolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>