force-app/main/default/objects/ABSLI_Case_Detail__c/fields/PAN_Aadhar_seeding_status__c.field-meta.xml
<CustomField>
    <fullName>PAN_Aadhar_seeding_status__c</fullName>
    <label>PAN Aadhar seeding status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>