force-app/main/default/objects/ABSLI_Case_Detail__c/fields/POI_Option_3__c.field-meta.xml
<CustomField>
    <fullName>POI_Option_3__c</fullName>
    <label>POI Option 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B</fullName>
                <label>Business Continuity</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Childs Education</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Childs Marriage</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Cover Outstanding Loans</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Family Protection</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Hung up/Call disconnected</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>NA</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>I for Not interested</label>
            </value>
            <value>
                <fullName>H</fullName>
                <label>Protection against Health</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Retirement Planning</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Risk</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Savings</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>Tax Planning</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Third Party</label>
            </value>
            <value>
                <fullName>W</fullName>
                <label>Wealth Creation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>