force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Policy_Anniversary_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Anniversary_Date__c</fullName>
    <label>Policy Anniversary Date</label>
    <type>Date</type>
</CustomField>