force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Policy_Identification__c.field-meta.xml
<CustomField>
    <fullName>Policy_Identification__c</fullName>
    <label>Policy Identification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>